# file-server

./: .gitignore  FileServer.spec  README.md  build.bat  clean.bat  file_server.py  file_server.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat
.github/workflows/: build.yml
templates/: index.html
